# Deep-Hedging-GAN

./: .gitignore  project-plan.md  pyproject.toml  requirements.txt
configs/: config.yaml
scripts/: phase1_calibrate_mafbm.py  phase2_train_siggan.py  phase3_train_rl.py  phase3b_train_naive_td3.py  phase4_distill_policy.py  phase5_backtest.py
src/: __init__.py
src/distillation/: __init__.py  symbolic.py
src/mafbm/: __init__.py  covariance.py  grid.py  simulation.py  validation.py  weights.py
src/rl/: __init__.py  env.py  frnn.py  reward.py  sigformer.py  td3.py
src/siggan/: __init__.py  cot_loss.py  discriminator.py  generator.py  signatures.py  trainer.py
src/utils/: __init__.py  black_scholes.py  data.py
src/validation/: __init__.py  backtest.py  benchmarks.py  metrics.py
tests/: test_mafbm.py  test_rl.py  test_siggan.py
